# opengl_boilerplate

./: .clang-format  .gitignore  CMakeLists.txt  README.md  cleanbuild.sh  compile_commands.json  util.sh
.ccls-cache/@@home@sai@Code@OpenGL@opengl_boilerplate/: @usr@include@GL@gl.h.blob  @usr@include@GL@glext.h.blob  @usr@include@GLFW@glfw3.h.blob  @usr@include@KHR@khrplatform.h.blob  @usr@include@alloca.h.blob  @usr@include@asm-generic@errno-base.h.blob  @usr@include@asm-generic@errno.h.blob  @usr@include@assert.h.blob  @usr@include@c++@9@backward@binders.h.blob  @usr@include@c++@9@bits@alloc_traits.h.blob  @usr@include@c++@9@bits@allocator.h.blob  @usr@include@c++@9@bits@basic_ios.h.blob  @usr@include@c++@9@bits@basic_ios.tcc.blob  @usr@include@c++@9@bits@basic_string.h.blob  @usr@include@c++@9@bits@basic_string.tcc.blob  @usr@include@c++@9@bits@char_traits.h.blob  @usr@include@c++@9@bits@concept_check.h.blob  @usr@include@c++@9@bits@cpp_type_traits.h.blob  @usr@include@c++@9@bits@cxxabi_forced.h.blob  @usr@include@c++@9@bits@cxxabi_init_exception.h.blob  @usr@include@c++@9@bits@exception.h.blob  @usr@include@c++@9@bits@exception_defines.h.blob  @usr@include@c++@9@bits@exception_ptr.h.blob  @usr@include@c++@9@bits@functexcept.h.blob  @usr@include@c++@9@bits@functional_hash.h.blob  @usr@include@c++@9@bits@hash_bytes.h.blob  @usr@include@c++@9@bits@ios_base.h.blob  @usr@include@c++@9@bits@istream.tcc.blob  @usr@include@c++@9@bits@locale_classes.h.blob  @usr@include@c++@9@bits@locale_classes.tcc.blob  @usr@include@c++@9@bits@locale_facets.h.blob  @usr@include@c++@9@bits@locale_facets.tcc.blob  @usr@include@c++@9@bits@localefwd.h.blob  @usr@include@c++@9@bits@memoryfwd.h.blob  @usr@include@c++@9@bits@move.h.blob  @usr@include@c++@9@bits@nested_exception.h.blob  @usr@include@c++@9@bits@ostream.tcc.blob  @usr@include@c++@9@bits@ostream_insert.h.blob  @usr@include@c++@9@bits@postypes.h.blob  @usr@include@c++@9@bits@predefined_ops.h.blob  (+134 more)
.ccls-cache/@home@sai@Code@OpenGL@opengl_boilerplate/: build@CMakeFiles@3.16.3@CompilerIdCXX@CMakeCXXCompilerId.cpp.blob  include@glm@detail@glm.cpp.blob  src@Camera.cpp.blob  src@Shader.cpp.blob  src@main.cpp  src@main.cpp.blob
include/: Camera.hpp  Mesh.hpp  Model.hpp  Shader.h  Shader.hpp  vertexData.h
include/glad/: glad.h
shaders/: fragment.glsl  lamp_fragment.glsl  vertex.glsl
src/: Camera.cpp  Mesh.cpp  Shader.cpp  glad.c  main.cpp
